--- a/jair.bib
+++ b/jair.bib
@@ -427,11 +427,6 @@ year = {2012}
 }
 
 
-@article{huertatowards,
-  title={Towards Cross-Lingual Sentence Similarity Comparison: A Generalized Non-Negative Matrix Factorization Approach},
-  author={Huerta, Juan M}
-}
-
 @inproceedings{platt2010translingual,
   title={Translingual document representations from discriminative projections},
   author={Platt, John C and Toutanova, Kristina and Yih, Wen-tau},
@@ -439,4 +434,54 @@ year = {2012}
   pages={251--261},
   year={2010},
   organization={Association for Computational Linguistics}
+}
+
+@inproceedings{polyLDA,
+ author = {Mimno, David and Wallach, Hanna M. and Naradowsky, Jason and Smith, David A. and McCallum, Andrew},
+ title = {Polylingual Topic Models},
+ booktitle = {Proceedings of the 2009 Conference on Empirical Methods in Natural Language Processing: Volume 2 - Volume 2},
+ series = {EMNLP '09},
+ year = {2009},
+ isbn = {978-1-932432-62-6},
+ location = {Singapore},
+ pages = {880--889},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=1699571.1699627},
+ acmid = {1699627},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+}
+
+@inproceedings{PCL_LSA,
+  title={Cross-lingual latent topic extraction},
+  author={Zhang, Duo and Mei, Qiaozhu and Zhai, ChengXiang},
+  booktitle={Proceedings of the 48th Annual Meeting of the Association for Computational Linguistics},
+  pages={1128--1137},
+  year={2010},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{nonnegfactor_lsi,
+  title={A novel two-step method for cross language representation learning},
+  author={Xiao, Min and Guo, Yuhong},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={1259--1267},
+  year={2013}
+}
+
+@inproceedings{cotrain,
+  title={Co-training for cross-lingual sentiment classification},
+  author={Wan, Xiaojun},
+  booktitle={Proceedings of the Joint Conference of the 47th Annual Meeting of the ACL and the 4th International Joint Conference on Natural Language Processing of the AFNLP: Volume 1-Volume 1},
+  pages={235--243},
+  year={2009},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{svm2k,
+  title={Two view learning: SVM-2K, theory and practice},
+  author={Farquhar, Jason and Hardoon, David and Meng, Hongying and Shawe-taylor, John S and Szedmak, Sandor},
+  booktitle={Advances in neural information processing systems},
+  pages={355--362},
+  year={2005}
 }
