Scale part update. We need the wrap up of the story.

--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -562,8 +562,9 @@ We also have a problem with the quality of the test data. For example, if we loo
 In order to determine how accurately we can predict cluster equivalence we have performed two experiments. In the first experiment we wanted to test how well do the individual approaches for cross-lingual article linking perform when used for linking the clusters about the same event. In the second experiment we tested how accurate is the prediction model when trained on different subsets of learning features. To evaluate the prediction accuracy for a given dataset we used 10-fold cross validation. In this technique, the dataset is partitioned into 10 folds, where 9 folds are used for training a model and the left-out fold is then used to test the accuracy of the model. The learning and testing process is repeated 10 times, each time with a different left-out fold.
 
 In Section~\ref{sec:models} we have described three main algorithms for identifying similar articles in different languages. These algorithms were $k$-means, LSI and CCA. To test which of these algorithms performs best we performed the following test. Using each algorithm, we analyzed all articles in Event Registry to find the most similar articles in other languages. The values of the cross-lingual article linking features (\texttt{linkCount} and \texttt{avgSimScore}) were then recomputed for all annotated learning examples. A dataset with only these two features and the label was constructed and used to test how accurate prediction models can be induced using the data. The results of the experiment are shown in Table~\ref{table:linkingEvalAlgos}. The table shows for each of the algorithms the obtained classification accuracy, precision and recall. We can see that the most informative features for cluster linking are obtained using the CCA algorithm, while $k$-means performs the worse. Firstly we verified the AMRR (average of mean reciprocal ranks over all language pairs) performance of approaches by holding out $15000$ aligned test documents and using $300000$ aligned documents
- as the training set. Figure~\ref{pc:AMRR} shows AMRR score as the function of the number of feature vectors. It is clear that CCA outperforms LSI approach and K-means lags far behind.
-Furthermore we inspected how number of features influences the accuracy of cluster linking. As we can see from Table~\ref{table:linkingEvalAlgos} choosing number of features vectors larger than $500$ barely effects linking performance. That is probably due to overfitting. Moreover we tested the performance of detecting large/small cluster linking, see Table~\ref{table:linkingEvalAlgosLargeSmall}.  As expected we obtained that it is harder to link small clusters and we need better retrieval. Hub CCA outperforms other methods in this sense also, probably as it has the best retrieval performance, see Figure~\ref{pic:AMRR}.
+ as the training set. Figure~\ref{pic:AMRR} shows AMRR score as the function of the number of feature vectors. It is clear that CCA outperforms LSI approach and K-means lags far behind.
+Furthermore we inspected how number of features influences the accuracy of cluster linking. As we can see from Table~\ref{table:linkingEvalAlgos} choosing number of features vectors larger than $500$ barely effects linking performance. That is probably due to overfitting. Moreover we tested the performance of detecting large/small cluster linking, see Table~\ref{table:linkingEvalAlgosLargeSmall}.  As expected we obtained that it is harder to link small clusters and we need better retrieval accuracy in such cases. CCA outperforms other methods in this sense also, probably as it has the best retrieval performance, see Figure~\ref{pic:AMRR}. This can be also used
+to get representatives of clusters more efficiently.
 
 %{\oldText{TODO:} add some explanation why this might be so.}
 %\emph{Andrej adds some tests, new experiment description graphs, and explanations for performance, done by Monday}
@@ -674,16 +675,17 @@ Based on the results we can make the following conclusions. The cross-lingual si
 %Number of similarities, 430k similarities every 200ms, currently could handle 1M articles,
 %(n \over 2) 500X500 proxy matrices, 300000x500 Projector matrices, 430000x500 data
 %Premultiply with proxy matrices, compare blockwise!
-One of the main advantages of our approach is that scales really well. It is fast, very robust to quality of training data, easily extendable, simple to implement and with low machine requirements. Ut currently runs on two Intel Xeon E5-2667 v2, 3.30GHz processor machine with 256GB of RAM. That is enough to do similarity computation over 150 languages if needed. It currently uses Wikipedia as freely available knowledge base.
+One of the main advantages of our approach is that scales really well. It is fast, very robust to quality of training data, easily extendable, simple to implement and with low machine requirements. The similarity pipeline is the most demanding part and currently runs on two Intel Xeon E5-2667 v2, 3.30GHz processor machine with 256GB of RAM. That is enough to do similarity computation over 150 languages if needed. It currently uses Wikipedia as freely available knowledge base.
+Similarity pipeline dramastically reduces the search space when linking clusters. 
 
-Currently we compute similarities over $24$ languages with tags: eng, spa, deu, zho, ita, fra, rus, swe, nld, tur, jpn, por, ara, fin, ron, kor, hrv, tam, hun, slv, pol, srp, cat, ukr but we support up to $100$ top Wikipedis languages. Our data stream is Newsfeed(http://newsfeed.ijs.si/) that produces $430k$ unique articles per day. Our system currently computes 400k similiarites per 200ms, that means that we compute $16*10^10$ similarities per day. We
-store one day buffer for every language, for that we need 1.5GB of memory, we store documents as 500 dimensional vectors. For each article we compute top $10$ most similar ones in every language.
+Currently we compute similarities over $24$ languages with tags: eng, spa, deu, zho, ita, fra, rus, swe, nld, tur, jpn, por, ara, fin, ron, kor, hrv, tam, hun, slv, pol, srp, cat, ukr but we support up to $100$ top Wikipedis languages. Our data stream is Newsfeed (http://newsfeed.ijs.si/) that produces $430k$ unique articles per day. Our system currently computes 400k similiarites per 200ms, that means that we compute $16*10^10$ similarities per day. We
+store one day buffer for every language, for that we need 1.5GB of memory, we store documents as 500 dimensional vectors. We must note that time complexity of similarity computations scales linearly with dimension of the feature space and does not  depend of number of languages. For each article we compute top $10$  most similar ones in every other language.
 For all linear algebra matrix and vector operations we use high performance numerical libraries as BLAS, OPENBLAS and Intel MKL. This currently allows us to process more than million articles per day.
 In our current implementation we use variation of hub approach. Our projector matrices are of size $500\times 300000,$ so every projector takes about $1.1$ GB of RAM. Moreover we need proxy matrices of size $500x500$ for every language pair. That is 0.5 GB for $24$ languages and $9.2$ GB for $100$ languages. All together we need around 135 GB of RAM for the system with 100 languages. Using proxy matrices we can project all the input documents in the common space. That enables us to do blockwise similarity computations and
 additional improvement in our system efficiency. Our code can be therefore easily parallelized using matrix multiplication instead of doing more matrix - vector multiplications. This speeds up our code by factor around $4.$ In this way we obtain some caching gains and ability to use vectorization.
-Our system is also easily extendable. If we want to add a language we only need to compute a projector matrix and proxy matrices with all other already available languages.
+Our system is also easily extendable. If we want to add new language we only need to compute a projector matrix and proxy matrices with all other already available languages.
 
-Comment on the caching gains in our implementation.¸¸Add the conclusion if the story.
+Add the conclusion of the story and the wrap up, Andrej needs help with this.
 
 
 \acks{The authors wish to thank blah blah blah.}
